# invoices

./: CMakeLists.txt  README.md
docs/: Invoice_ERD.drawio
src/: contact.c  contact.h  input.c  input.h  main.c
src/libs/slre/: CMakeLists.txt
src/libs/sqlite3/: CMakeLists.txt
src/models/: customer.c  customer.h
